--- a/package.json
+++ b/package.json
@@ -1,12 +1,57 @@
 {
   "name": "ginger-ui-kit",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "private": false,
+  "author": "Alex Nixx",
+  "description": "React component library of the Ginger e-commerce website",
+  "keywords": [
+    "react",
+    "react-component",
+    "ginger"
+  ],
+  "license": "MIT",
+  "type": "module",
+  "files": [
+    "dist/**/*"
+  ],
+  "main": "dist/esm/index.js",
+  "module": "dist/cjs/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    }
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "scripts": {
+    "build": "rimraf dist && rollup -c",
+    "publish": "npm run build && npm version patch && npm publish",
+    "lint:ts": "prettier --check . && eslint \"**/*.{ts,tsx}\"",
+    "lint:ts:fix": "prettier --write . && eslint \"**/*.{ts,tsx}\" --fix"
+  },
+  "devDependencies": {
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^11.1.5",
+    "@rollup/plugin-url": "^8.0.2",
+    "@svgr/rollup": "^8.1.0",
+    "@types/react": "^18.2.47",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.56.0",
+    "eslint-config-react-app": "^7.0.1",
+    "postcss": "^8.4.33",
+    "postcss-modules": "^6.0.0",
+    "postcss-preset-env": "^9.3.0",
+    "prettier": "^3.1.1",
+    "rollup": "^4.9.4",
+    "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
+    "sass": "^1.69.7",
+    "typescript": "^5.3.3"
+  },
+  "peerDependencies": {
+    "react": "^18.2.0"
+  }
 }
