--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "build": "rimraf dist && rollup -c",
     "publish": "npm run build && npm version patch && npm publish",
     "lint:ts": "prettier --check . && eslint \"**/*.{ts,tsx}\"",
-    "lint:ts:fix": "prettier --write . && eslint \"**/*.{ts,tsx}\" --fix"
+    "lint:ts:fix": "prettier --write . && eslint \"**/*.{ts,tsx}\" --fix",
+    "sb:start": "storybook dev -p 6006",
+    "sb:build": "storybook build"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
@@ -35,11 +37,22 @@
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^11.1.5",
     "@rollup/plugin-url": "^8.0.2",
+    "@storybook/addon-essentials": "^7.6.7",
+    "@storybook/addon-interactions": "^7.6.7",
+    "@storybook/addon-links": "^7.6.7",
+    "@storybook/addon-onboarding": "^1.0.10",
+    "@storybook/blocks": "^7.6.7",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/react": "^7.6.7",
+    "@storybook/react-webpack5": "^7.6.7",
+    "@storybook/test": "^7.6.7",
     "@svgr/rollup": "^8.1.0",
+    "@svgr/webpack": "^8.1.0",
     "@types/react": "^18.2.47",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-storybook": "^0.6.15",
     "postcss": "^8.4.33",
     "postcss-modules": "^6.0.0",
     "postcss-preset-env": "^9.3.0",
@@ -49,7 +62,9 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.69.7",
-    "typescript": "^5.3.3"
+    "storybook": "^7.6.7",
+    "typescript": "^5.3.3",
+    "url-loader": "^4.1.1"
   },
   "peerDependencies": {
     "react": "^18.2.0"
