--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "lint:ts": "prettier --check . && eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "prettier --write . && eslint \"**/*.{ts,tsx}\" --fix",
     "sb:start": "storybook dev -p 6006",
-    "sb:build": "storybook build"
+    "sb:build": "storybook build",
+    "sb:deploy": "npm run sb:build && gh-pages -d storybook-static"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^25.0.7",
@@ -53,6 +54,7 @@
     "eslint": "^8.56.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-storybook": "^0.6.15",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.33",
     "postcss-modules": "^6.0.0",
     "postcss-preset-env": "^9.3.0",
