--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,25 +1,12 @@
 {
-  "extends": [
-    "react-app",
-    "react-app/jest",
-    "plugin:storybook/recommended"
-  ],
+  "extends": ["react-app", "react-app/jest", "plugin:storybook/recommended"],
   "rules": {
     "no-console": "warn",
     "no-alert": "warn",
     "no-debugger": "warn",
-    "max-lines": [
-      "error",
-      1000
-    ],
-    "max-lines-per-function": [
-      "error",
-      100
-    ],
-    "max-params": [
-      "error",
-      7
-    ],
+    "max-lines": ["error", 1000],
+    "max-lines-per-function": ["error", 100],
+    "max-params": ["error", 7],
     "max-len": [
       "error",
       {
@@ -46,10 +33,7 @@
         "after": true
       }
     ],
-    "object-curly-spacing": [
-      "warn",
-      "always"
-    ],
+    "object-curly-spacing": ["warn", "always"],
     "space-before-blocks": "warn",
     "arrow-spacing": [
       "error",
@@ -59,19 +43,10 @@
       }
     ],
     "space-infix-ops": "error",
-    "comma-dangle": [
-      "error",
-      "never"
-    ],
-    "semi": [
-      "warn",
-      "always"
-    ],
+    "comma-dangle": ["error", "never"],
+    "semi": ["warn", "always"],
     "dot-notation": "error",
-    "quotes": [
-      "error",
-      "single"
-    ],
+    "quotes": ["error", "single"],
     "no-extra-parens": [
       "warn",
       "all",
