--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-storybook": "^0.6.15",
     "gh-pages": "^6.1.1",
+    "husky": "^8.0.0",
     "postcss": "^8.4.33",
     "postcss-modules": "^6.0.0",
     "postcss-preset-env": "^9.3.0",
@@ -66,9 +67,9 @@
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.69.7",
     "storybook": "^7.6.7",
+    "tslib": "^2.6.2",
     "typescript": "^5.3.3",
-    "url-loader": "^4.1.1",
-    "husky": "^8.0.0"
+    "url-loader": "^4.1.1"
   },
   "peerDependencies": {
     "react": "^18.2.0"
