--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "publish": "npm run build && npm version patch && npm publish",
     "lint:ts": "prettier --check . && eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "prettier --write . && eslint \"**/*.{ts,tsx}\" --fix",
+    "test:unit": "jest",
     "sb:start": "storybook dev -p 6006",
     "sb:build": "storybook build",
     "sb:deploy": "rimraf storybook-static && npm run sb:build && gh-pages -d storybook-static",
@@ -50,6 +51,7 @@
     "@storybook/test": "^7.6.7",
     "@svgr/rollup": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
+    "@types/jest": "^29.5.11",
     "@types/react": "^18.2.47",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
@@ -57,6 +59,8 @@
     "eslint-plugin-storybook": "^0.6.15",
     "gh-pages": "^6.1.1",
     "husky": "^8.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.33",
     "postcss-modules": "^6.0.0",
     "postcss-preset-env": "^9.3.0",
@@ -67,6 +71,8 @@
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.69.7",
     "storybook": "^7.6.7",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
     "typescript": "^5.3.3",
     "url-loader": "^4.1.1"
