--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
     "lint:ts": "prettier --check . && eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "prettier --write . && eslint \"**/*.{ts,tsx}\" --fix",
     "test:unit": "jest",
+    "icons": "npm run icons:gen && npm run icons:optim",
+    "icons:gen": "rimraf src/components/icons && svgr -d src/components/icons src/assets/svg",
+    "icons:optim": "svgo -f src/assets/svg -o src/assets/svg",
     "sb:start": "storybook dev -p 6006",
     "sb:build": "storybook build",
     "sb:deploy": "rimraf storybook-static && npm run sb:build && gh-pages -d storybook-static",
@@ -54,6 +57,7 @@
     "@storybook/react": "^7.6.7",
     "@storybook/react-webpack5": "^7.6.7",
     "@storybook/test": "^7.6.7",
+    "@svgr/cli": "^8.1.0",
     "@svgr/rollup": "^8.1.0",
     "@svgr/webpack": "^8.1.0",
     "@types/jest": "^29.5.11",
@@ -77,6 +81,7 @@
     "rollup-plugin-postcss": "^4.0.2",
     "sass": "^1.69.7",
     "storybook": "^7.6.7",
+    "svgo": "^3.2.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
     "tslib": "^2.6.2",
