--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@svgr/webpack": "^8.1.0",
     "@types/jest": "^29.5.11",
     "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.19",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.56.0",
     "eslint-config-react-app": "^7.0.1",
@@ -89,9 +90,11 @@
     "url-loader": "^4.1.1"
   },
   "peerDependencies": {
-    "react": "^18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@babel/runtime": "^7.23.8"
+    "@babel/runtime": "^7.23.8",
+    "@react-spring/web": "^9.7.3"
   }
 }
