--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.23.8",
-    "@react-spring/web": "^9.7.3"
+    "@react-spring/web": "^9.7.3",
+    "@use-gesture/react": "^10.3.0"
   }
 }
