refact(components): update styles and types

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -8,6 +8,5 @@
   "singleQuote": true,
   "jsxSingleQuote": true,
   "trailingComma": "none",
-  "endOfLine": "lf",
-  "bracketSpacing": false
+  "endOfLine": "lf"
 }
